Small fixes and jsdoc

--- a/src/scss/components/nereels-list.scss
+++ b/src/scss/components/nereels-list.scss
@@ -5,6 +5,12 @@
   overflow: auto;
   scroll-snap-type: y mandatory;
   background-color: var(--primary-dark);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__item {
     position: relative;
